tests/snapshots/tokenizer_test__tokenizer__tokenizer_unexpected_token_error.snap
---
source: tests/tokenizer_test.rs
expression: err
---
Some(
    SyntaxError {
        message: "Unexpected token",
        span: Span {
            start: 0,
            end: 1,
        },
    },
)
