tests/snapshots/tokenizer_test__tokenizer__tokenizer_variable.snap
---
source: tests/tokenizer_test.rs
expression: tokens
---
[
    Token {
        kind: "keyword",
        raw: "FOO",
        span: Span {
            start: 0,
            end: 3,
        },
    },
    Token {
        kind: "colon",
        raw: ":",
        span: Span {
            start: 3,
            end: 4,
        },
    },
    Token {
        kind: "keyword",
        raw: "BAZ",
        span: Span {
            start: 4,
            end: 7,
        },
    },
]
